namespace Powertech.Platform.Notifications.Domain.Model.ValueObjects;

public record NotificationMessage(string Content);