@startuml
skinparam monochrome false

package "SafeRoute.Notifications.Domain.Model.Aggregates" {
  entity "Notification" as Notification <<AggregateRoot>> {
    -id: NotificationId
    -organizationId: NotificationId
    -parentId: NotificationId
    -tripId: NotificationId
    -category: NotificationCategory
    -deliveryState: NotificationDeliveryState
    -message: NotificationMessage
    -sentAt: DateTimeOffset
    -alerts: ICollection<Alert>
    -announcements: ICollection<Announcement>
    +Dispatch(): void
    +MarkDelivered(): void
    +AddAlert(panic: bool): void
    +AddAnnouncement(routeId: Guid, message: string): void
  }
}

package "SafeRoute.Notifications.Domain.Model.Entities" {
  entity "Alert" as Alert <<Entity>> {
    -id: AlertId
    -notificationId: NotificationId
    -triggeredAt: DateTimeOffset
    -panic: bool
  }

  entity "Announcement" as Announcement <<Entity>> {
    -id: AnnouncementId
    -notificationId: NotificationId
    -routeId: NotificationId
    -message: NotificationMessage
    -publishedAt: DateTimeOffset
  }
}

package "SafeRoute.Notifications.Domain.Model.ValueObjects" {
  class "NotificationId" as NotificationId <<ValueObject>> {
    -identifier: Guid
  }

  class "AlertId" as AlertId <<ValueObject>> {
    -identifier: Guid
  }

  class "AnnouncementId" as AnnouncementId <<ValueObject>> {
    -identifier: Guid
  }

  class "NotificationCategory" as NotificationCategory <<ValueObject>> {
    -value: string
  }

  class "NotificationDeliveryState" as NotificationDeliveryState <<ValueObject>> {
    -value: string
  }

  class "NotificationMessage" as NotificationMessage <<ValueObject>> {
    -content: string
  }
}

Notification "1" --> "1" NotificationId : identified by
Notification "1" --> "1" NotificationCategory : categorized by
Notification "1" --> "1" NotificationDeliveryState : has
Notification "1" --> "1" NotificationMessage : contains
Notification "1" *--> "0..*" Alert : contains
Notification "1" *--> "0..*" Announcement : contains
Alert "1" --> "1" AlertId : identified by
Announcement "1" --> "1" AnnouncementId : identified by
Announcement "1" --> "1" NotificationMessage : contains

@enduml
